fixed overflow on scroll container. It was preventing scroll after add to playlist

--- a/css/main.css
+++ b/css/main.css
@@ -5283,7 +5283,8 @@ section.app {
 #scroll-container {
   height: 74vh;
   min-height: 500px;
-  overflow: scroll;
+  overflow: scroll !important;
+  
 }
 .li-col1, .li-col2, .li-col3, .li-col4, .li-col5, .li-col6, .li-col7 {
   max-height: 48px;
